--- a/shard.yml
+++ b/shard.yml
@@ -1,5 +1,5 @@
 name: lru-cache
-version: 0.0.1
+version: 0.0.2
 authors:
   - sa-0001
 description: |
@@ -10,5 +10,5 @@ crystal: 0.35.1
 
 development_dependencies:
   tap:
-    github: https://github.com/sa-0001/tap-cr.git
+    github: sa-0001/tap-cr
     version: ~> 0.0.1
